# t2-less8-gnb

./: .gitignore  CMakeLists.txt  README.md  buildandrun.sh  gnb.cpp  gnb.h  helpers.cpp  helpers.h  main.cpp
